--- a/src/Components/TabelaConsulta/style.css
+++ b/src/Components/TabelaConsulta/style.css
@@ -4,6 +4,7 @@ table.tabelaConsulta {
     width: 100%;
     color: #fff;
     margin-top: 100px;
+    font-size: 12px;
 }
 
 .tabelaConsulta td, th {
@@ -21,9 +22,9 @@ table.tabelaConsulta {
 }
 
 .tabelaConsulta .tdsituacao1 {
-    color: green;
+    color: rgb(133, 255, 133);
 }
 
 .tabelaConsulta .tdsituacao0 {
-    color: red;
+    color: rgb(255, 228, 141);
 }
